# xeques-core

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Cargo.toml.backup  INVARIANTS.md  LICENSE  PROTOCOL_STATUS.md  README.md  SECURITY.md  chain.json
.github/: CODEOWNERS
paper/: RFC-0001-PoCC.md  RFC-0001.md  RFC-0002-Security.md  RFC-0003-Reference.md  architecture.mmd  references.bib  xeques-paper-draft.md  xeques-paper.md  xeques-paper.tex  xeques-pocc-demo.md
publish_clean/: Cargo.toml
publish_clean/src/: main.rs
src/: block.rs  chain.rs  config.rs  consensus_engine.rs  federation_broadcast.rs  federation_network.rs  federation_tracker.rs  identity.rs  main.rs  monitoring.rs  node_config.rs  selector.rs  signature.rs
src/crypto/: dilithium.rs  falcon.rs  mod.rs  sphincs.rs  sphincs.rs.bak_20260211113053
src/network/: client.rs  mod.rs  server.rs
src/policy/: context.rs  default_policy.rs  mod.rs  policy.rs
src/protocol/: arbitration.rs  command.rs  consensus.rs  federation.rs  finality.rs  logger.rs  mod.rs  queue.rs  receipt.rs  receipt_verify.rs  signed.rs  state.rs  telemetry.rs
src/security/: authority.rs  keys.rs  mod.rs  node_identity.rs  registry.rs  verify.rs  vote_crypto.rs
src/sim/: mod.rs  simulator.rs
