[package]
name = "xeques-core"
version = "0.1.0"
edition = "2021"

[dependencies]
pqcrypto-dilithium = "0.5.0"
pqcrypto-falcon = "0.4.1"
pqcrypto-sphincsplus = "0.7.2"
pqcrypto-traits = "0.3.5"
hex = "0.4"
sha2 = "0.10"
sysinfo = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.11"

base64 = "0.21"

rand = "0.8"
clap = { version = "4.5.58", features = ["derive"] }
uuid = "1.20.0"
